--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	],
 	"require": {
 		"php": ">=5.4.0",
-		"typo3fluid/fluid": "dev-master"
+		"typo3fluid/fluid": "^2.4.0"
 	},
 	"require-dev": {
 		"laravel/framework": "5.1.*"
